continue with fix of file conflicts (https://github.com/perberos/Mate-Desktop-Environment/issues/38)

--- a/mate-keyring/configure.in
+++ b/mate-keyring/configure.in
@@ -671,10 +671,10 @@ docs/reference/gcr/Makefile
 docs/reference/gp11/Makefile
 egg/Makefile
 egg/tests/Makefile
-gcr/gcr.pc
+gcr/mate-gcr.pc
 gcr/Makefile
 gcr/tests/Makefile
-gp11/gp11.pc
+gp11/mate-gp11.pc
 gp11/Makefile
 gp11/tests/Makefile
 pam/Makefile
