--- a/mate-keyring/gp11/Makefile.in
+++ b/mate-keyring/gp11/Makefile.in
@@ -38,14 +38,14 @@ build_triplet = @build@
 host_triplet = @host@
 subdir = gp11
 DIST_COMMON = $(inc_HEADERS) $(srcdir)/Makefile.am \
-	$(srcdir)/Makefile.in $(srcdir)/gp11.pc.in
+	$(srcdir)/Makefile.in $(srcdir)/mate-gp11.pc.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.in
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
-CONFIG_CLEAN_FILES = gp11.pc
+CONFIG_CLEAN_FILES = mate-gp11.pc
 CONFIG_CLEAN_VPATH_FILES =
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
@@ -350,7 +350,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-incdir = $(includedir)/gp11
+incdir = $(includedir)/mate-gp11
 inc_HEADERS = \
 	gp11.h
 
@@ -387,13 +387,13 @@ libmategp11_la_LIBADD = \
 	$(GLIB_LIBS)
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = gp11-$(GP11_MAJOR).pc
+pkgconfig_DATA = mate-gp11-$(GP11_MAJOR).pc
 EXTRA_DIST = \
-	gp11.pc.in \
+	mate-gp11.pc.in \
 	gp11-marshal.list
 
 DISTCLEANFILES = \
-	gp11-$(GP11_MAJOR).pc
+	mate-gp11-$(GP11_MAJOR).pc
 
 @WITH_TESTS_FALSE@TESTS_DIR = 
 @WITH_TESTS_TRUE@TESTS_DIR = tests
@@ -435,7 +435,7 @@ $(top_srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(am__configure_deps)
 $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
-gp11.pc: $(top_builddir)/config.status $(srcdir)/gp11.pc.in
+mate-gp11.pc: $(top_builddir)/config.status $(srcdir)/mate-gp11.pc.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 install-libLTLIBRARIES: $(lib_LTLIBRARIES)
 	@$(NORMAL_INSTALL)
@@ -888,8 +888,8 @@ gp11-marshal.c: gp11-marshal.list $(GLIB_GENMARSHAL)
 	echo "#include \"gp11-marshal.h\"" > $@ && \
 	$(GLIB_GENMARSHAL) $< --body --prefix=_gp11_marshal >> $@
 
-gp11-$(GP11_MAJOR).pc: gp11.pc
-	cp gp11.pc gp11-$(GP11_MAJOR).pc
+mate-gp11-$(GP11_MAJOR).pc: mate-gp11.pc
+	cp mate-gp11.pc mate-gp11-$(GP11_MAJOR).pc
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
