--- a/mate-keyring/gp11/mate-gp11.pc.in
+++ b/mate-keyring/gp11/mate-gp11.pc.in
@@ -6,9 +6,9 @@ datarootdir=@datarootdir@
 datadir=@datadir@
 sysconfdir=@sysconfdir@
 
-Name: gp11
+Name: mate-gp11
 Description: GObject bindings for PKCS#11
 Version: @VERSION@
 Requires: glib-2.0
-Libs: -L${libdir} -lgp11
-Cflags: -I${includedir}/gp11
+Libs: -L${libdir} -lmate-gp11
+Cflags: -I${includedir}/mate-gp11
