fixing file conflicts (https://github.com/perberos/Mate-Desktop-Environment/issues/38)

--- a/mate-keyring/docs/reference/gcr/Makefile.in
+++ b/mate-keyring/docs/reference/gcr/Makefile.in
@@ -261,7 +261,7 @@ AUTOMAKE_OPTIONS = 1.6
 # of using the various options.
 
 # The name of the module, e.g. 'glib'.
-DOC_MODULE = gcr
+DOC_MODULE = mate-gcr
 
 # Uncomment for versioned docs and specify the version of the module, e.g. '2'.
 DOC_MODULE_VERSION = @GCR_MAJOR@
