--- a/mate-keyring/docs/reference/gp11/Makefile.in
+++ b/mate-keyring/docs/reference/gp11/Makefile.in
@@ -261,7 +261,7 @@ AUTOMAKE_OPTIONS = 1.6
 # of using the various options.
 
 # The name of the module, e.g. 'glib'.
-DOC_MODULE = gp11
+DOC_MODULE = mate-gp11
 
 # Uncomment for versioned docs and specify the version of the module, e.g. '2'.
 #DOC_MODULE_VERSION=2
