--- a/libmate/mate-data/Makefile.in
+++ b/libmate/mate-data/Makefile.in
@@ -249,7 +249,7 @@ top_srcdir = @top_srcdir@
 soundlistdir = $(sysconfdir)/sound/events
 soundlist_in_files = \
 	mate.soundlist.in		\
-	gtk2-events.soundlist.in
+	gtk2-mate-events.soundlist.in
 
 soundlist_DATA = $(soundlist_in_files:.soundlist.in=.soundlist)
 man_MANS = mate-options.7
