updating version tag

--- a/libmate/configure.in
+++ b/libmate/configure.in
@@ -8,8 +8,8 @@ AC_PREREQ(2.54)
 # set LIBMATE_BINARY_AGE and LIBMATE_INTERFACE_AGE to 0.
 #
 m4_define([libmate_major_version], [2011])
-m4_define([libmate_minor_version], [10])
-m4_define([libmate_micro_version], [29])
+m4_define([libmate_minor_version], [11])
+m4_define([libmate_micro_version], [16])
 m4_define([libmate_interface_age], [0])
 # If you need a modifier for the version number.
 # Normally empty, but can be used to make "fixup" releases.
@@ -116,7 +116,7 @@ MATE_COMPILE_WARNINGS
 dnl Define MATE_ENABLE_DEBUG if the --enable-debug switch was given.
 MATE_DEBUG_CHECK
 
-dnl Don't use AC_PROG_AWK since we need the full pathname.
+dnl Do not use AC_PROG_AWK since we need the full pathname.
 AC_PATH_PROGS(AWK, mawk gawk nawk awk, )
 AC_PATH_PROGS(PERL, perl5 perl)
 
@@ -200,7 +200,7 @@ dnl ==============================================
 AC_PATH_PROG(MATECONFTOOL, mateconftool-2, no)
 
 if test x"$MATECONFTOOL" = xno; then
-  AC_MSG_ERROR([mateconftool-2 executable not found in your path - should be installed with MateConf])
+	AC_MSG_ERROR([mateconftool-2 executable not found in your path - should be installed with MateConf])
 fi
 
 AM_MATECONF_SOURCE_2
