--- a/libmatekbd/configure.in
+++ b/libmatekbd/configure.in
@@ -1,7 +1,12 @@
 dnl ***************************************************************************
 dnl *** configure.in for libmatekbd                                        ***
 dnl ***************************************************************************
-AC_INIT(libmatekbd, 2011.10.29, [https://github.com/perberos/mate-desktop-environment])
+m4_define([libmatekbd_major_version], [2011])
+m4_define([libmatekbd_minor_version], [11])
+m4_define([libmatekbd_micro_version], [16])
+m4_define([libmatekbd_version],[libmatekbd_major_version.libmatekbd_minor_version.libmatekbd_micro_version])
+
+AC_INIT([libmatekbd], [libmatekbd_version], [https://github.com/perberos/mate-desktop-environment])
 AC_PREREQ(2.59)
 
 VERSION_INFO=6:0:2
