--- a/libmatekeyring/configure.in
+++ b/libmatekeyring/configure.in
@@ -1,4 +1,10 @@
-AC_INIT([libmate-keyring], [2011.10.29], [https://github.com/perberos/mate-desktop-environment])
+
+m4_define([libmatekeyring_major_version], [2011])
+m4_define([libmatekeyring_minor_version], [11])
+m4_define([libmatekeyring_micro_version], [16])
+m4_define([libmatekeyring_version],[libmatekeyring_major_version.libmatekeyring_minor_version.libmatekeyring_micro_version])
+
+AC_INIT([libmate-keyring], [libmatekeyring_version], [https://github.com/perberos/mate-desktop-environment])
 AC_CONFIG_SRCDIR([library/mate-keyring.h])
 AM_INIT_AUTOMAKE([tar-ustar])
 
