--- a/libmateui/distro/archlinux/PKGBUILD
+++ b/libmateui/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=libmateui
-pkgver=2011.10.29
+pkgver=2011.11.16
 pkgrel=1
 pkgdesc="User Interface library for MATE"
 arch=('i686' 'x86_64')
@@ -13,17 +13,20 @@ source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz
 sha256sums=('46fd0f6ab6087ff38aa79f017b53d479ade03f177ab4b0bed0d76b72caf5ebec')
 
 build() {
-	cd "${srcdir}/${pkgname}"
-	./configure --prefix=/usr --sysconfdir=/etc \
-		--localstatedir=/var --disable-static \
-		--libexecdir=/usr/lib/libmateui || return 1
-	# --with-gtk=3.0
+    cd "${srcdir}/${pkgname}"
+    ./autogen.sh \
+        --prefix=/usr \
+        --sysconfdir=/etc \
+        --localstatedir=/var \
+        --disable-static \
+        --libexecdir=/usr/lib/libmateui || return 1
+    # --with-gtk=3.0
 
-	make || return 1
+    make || return 1
 }
 
 package() {
-	cd "${srcdir}/${pkgname}"
+    cd "${srcdir}/${pkgname}"
 
     make DESTDIR="$pkgdir" install || return 1
 }
