--- a/mate-corba/distro/archlinux/PKGBUILD
+++ b/mate-corba/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-corba
-pkgver=2011.10.29
+pkgver=2011.11.16
 pkgrel=1
 pkgdesc="Thin/fast CORBA ORB"
 arch=('i686' 'x86_64')
@@ -13,12 +13,14 @@ source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz
 sha256sums=('59bc502dc57545be1e03e84ce95b747112cb9baf0b85e39979d964b34ff8c3b8')
 
 build() {
-	cd "${srcdir}/${pkgname}"
-	./configure --prefix=/usr --disable-static || return 1
-	make || return 1
+    cd "${srcdir}/${pkgname}"
+    ./autogen.sh \
+        --prefix=/usr \
+        --disable-static || return 1
+    make || return 1
 }
 
 package() {
-	cd "${srcdir}/${pkgname}"
-	make DESTDIR="${pkgdir}" install || return 1
+    cd "${srcdir}/${pkgname}"
+    make DESTDIR="${pkgdir}" install || return 1
 }
