--- a/mate-mime-data/distro/archlinux/PKGBUILD
+++ b/mate-mime-data/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-mime-data
-pkgver=2011.10.29
+pkgver=2011.11.16
 pkgrel=1
 pkgdesc="The base MIME and Application database for MATE"
 arch=('any')
@@ -12,15 +12,15 @@ source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz
 sha256sums=('9891b8d90b42e18db0cc2923cfe961423305a354efbe9c93388e29cc1eb89dad')
 
 build() {
-	cd "${srcdir}/${pkgname}"
-	./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var || return 1
-	make || return 1
+    cd "${srcdir}/${pkgname}"
+    ./autogen.sh --prefix=/usr --sysconfdir=/etc --localstatedir=/var || return 1
+    make || return 1
 }
 
 package() {
-	cd "${srcdir}/${pkgname}"
-	make DESTDIR="${pkgdir}" install
+    cd "${srcdir}/${pkgname}"
+    make DESTDIR="${pkgdir}" install
 
-	install -m755 -d "${pkgdir}/usr/lib"
-	mv "${pkgdir}/usr/share/pkgconfig" "${pkgdir}/usr/lib/"
+    install -m755 -d "${pkgdir}/usr/lib"
+    mv "${pkgdir}/usr/share/pkgconfig" "${pkgdir}/usr/lib/"
 }
