--- a/mate-window-manager/src/marco.schemas.in.in
+++ b/mate-window-manager/src/marco.schemas.in.in
@@ -247,7 +247,7 @@
       <applyto>/apps/marco/general/theme</applyto>
       <owner>marco</owner>
       <type>string</type>
-      <default>Clearlooks</default>
+      <default>Spidey-Left</default>
       <locale name="C">
          <short>Current theme</short>
          <long>
