--- a/libmatecomponent/distro/archlinux/PKGBUILD
+++ b/libmatecomponent/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=libmatecomponent
-pkgver=2011.10.29
+pkgver=2011.11.15
 pkgrel=1
 pkgdesc="A set of language and system independant CORBA interfaces for creating reusable components"
 arch=('i686' 'x86_64')
@@ -11,21 +11,24 @@ options=('!emptydirs' '!libtool')
 backup=('etc/matecomponent-activation/matecomponent-activation-config.xml')
 url="http://www.gnome.org"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download
-		matecomponent-activation-config.xml)
+        matecomponent-activation-config.xml)
 install=libmatecomponent.install
 sha256sums=('b50820f9bd5204e8c6771634dc5a90c04f7a0b08cc1373ac284c4c5abba114f1'
             'c1fc9b102f2635b0d4be39728d19737c1013b61395d0bd0c508fc6ad6b61643e')
 
 build() {
-	cd "${srcdir}/${pkgname}"
-	./configure --prefix=/usr --sysconfdir=/etc \
-		--localstatedir=/var --disable-static \
-		--libexecdir=/usr/lib/matecomponent || return 1
-	make || return 1
+    cd "${srcdir}/${pkgname}"
+    ./autogen.sh \
+        --prefix=/usr \
+        --sysconfdir=/etc \
+        --localstatedir=/var \
+        --disable-static \
+        --libexecdir=/usr/lib/matecomponent || return 1
+    make || return 1
 }
 
 package() {
-	cd "${srcdir}/${pkgname}"
-	make DESTDIR="${pkgdir}" install
-	install -m644 "${srcdir}/matecomponent-activation-config.xml" "${pkgdir}/etc/matecomponent-activation/"
+    cd "${srcdir}/${pkgname}"
+    make DESTDIR="${pkgdir}" install
+    install -m644 "${srcdir}/matecomponent-activation-config.xml" "${pkgdir}/etc/matecomponent-activation/"
 }
