--- a/mate-control-center/distro/archlinux/PKGBUILD
+++ b/mate-control-center/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-control-center
-pkgver=2011.10.29
+pkgver=2011.11.16
 pkgrel=1
 pkgdesc="The Control Center for MATE"
 arch=('i686' 'x86_64')
@@ -14,23 +14,27 @@ source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz
 sha256sums=('191b0eda67941b93f3542b1dfcfd16cc6823a8304eb56c22921a73ac3a079adf')
 
 build() {
-	cd "${srcdir}/${pkgname}"
-	./configure --prefix=/usr --sysconfdir=/etc \
-		--localstatedir=/var --disable-static \
-		--disable-scrollkeeper --disable-update-mimedb || return 1
-	#  --enable-aboutme <- this requires libebook (from evolution)
-	make || return 1
+    cd "${srcdir}/${pkgname}"
+    ./autogen.sh \
+        --prefix=/usr \
+        --sysconfdir=/etc \
+        --localstatedir=/var \
+        --disable-static \
+        --disable-scrollkeeper \
+        --disable-update-mimedb || return 1
+    #  --enable-aboutme <- this requires libebook (from evolution)
+    make || return 1
 }
 
 package() {
-	cd "${srcdir}/${pkgname}"
+    cd "${srcdir}/${pkgname}"
 
-	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
+    make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 
-	install -m755 -d "${pkgdir}/usr/share/mateconf/schemas"
-	mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas" --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.schemas || return 1
-	rm -f ${pkgdir}/etc/mateconf/schemas/*.schemas
+    install -m755 -d "${pkgdir}/usr/share/mateconf/schemas"
+    mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas" --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.schemas || return 1
+    rm -f ${pkgdir}/etc/mateconf/schemas/*.schemas
 
-	# --disable-update-mimedb?
-	rm -f "${pkgdir}/usr/share/applications/mimeinfo.cache"
+    # --disable-update-mimedb?
+    rm -f "${pkgdir}/usr/share/applications/mimeinfo.cache"
 }
