--- a/mate-doc-utils/distro/archlinux/PKGBUILD
+++ b/mate-doc-utils/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-doc-utils
-pkgver=2011.10.29
+pkgver=2011.11.16
 pkgrel=1
 pkgdesc="Documentation utilities for MATE"
 arch=('any')
@@ -14,21 +14,24 @@ sha256sums=('fdc4bd26f6054c6348f2952b8d6e1522d4c509df95715e6f9001896e7a3e5750')
 groups=('mate')
 
 build() {
-	cd "${srcdir}/${pkgname}"
-	PYTHON=/usr/bin/python2 ./configure --prefix=/usr --sysconfdir=/etc \
-		--mandir=/usr/share/man --localstatedir=/var \
-		--disable-scrollkeeper || return 1
-	make || return 1
+    cd "${srcdir}/${pkgname}"
+    PYTHON=/usr/bin/python2 ./autogen.sh \
+        --prefix=/usr \
+        --sysconfdir=/etc \
+        --mandir=/usr/share/man \
+        --localstatedir=/var \
+        --disable-scrollkeeper || return 1
+    make || return 1
 }
 
 package() {
-	cd "${srcdir}/${pkgname}"
-	make DESTDIR="$pkgdir" install || return 1
+    cd "${srcdir}/${pkgname}"
+    make DESTDIR="$pkgdir" install || return 1
 
-	# files with conflicts with gnome-doc-utils
-	rm -rf "${pkgdir}/usr/share/xml/mallard/"
-	rm "${pkgdir}/usr/share/pkgconfig/xml2po.pc"
-	rm -rf "${pkgdir}/usr/share/man/"
-	rm -rf "${pkgdir}/usr/lib/"
-	rm "${pkgdir}/usr/bin/xml2po"
+    # files with conflicts with gnome-doc-utils
+    rm -rf "${pkgdir}/usr/share/xml/mallard/"
+    rm "${pkgdir}/usr/share/pkgconfig/xml2po.pc"
+    rm -rf "${pkgdir}/usr/share/man/"
+    rm -rf "${pkgdir}/usr/lib/"
+    rm "${pkgdir}/usr/bin/xml2po"
 }
