--- a/mate-file-manager/distro/archlinux/PKGBUILD
+++ b/mate-file-manager/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-file-manager
-pkgver=2011.11.10
+pkgver=2011.11.16
 pkgrel=1
 pkgdesc="The MATE shell and file manager"
 arch=('i686' 'x86_64')
@@ -14,23 +14,27 @@ sha256sums=('4807b5431c3760139d463330e83455d1b560a6d873c4e2c4f3a57f6eb1719ec0')
 groups=('mate')
 
 build() {
-	cd "${srcdir}/${pkgname}"
+    cd "${srcdir}/${pkgname}"
 
-	./autogen.sh --prefix=/usr --sysconfdir=/etc \
-		--localstatedir=/var --disable-static \
-		--libexecdir=/usr/lib/caja --enable-unique \
-		--disable-update-mimedb || return 1
+    ./autogen.sh \
+        --prefix=/usr \
+        --sysconfdir=/etc \
+        --localstatedir=/var \
+        --disable-static \
+        --libexecdir=/usr/lib/caja \
+        --enable-unique \
+        --disable-update-mimedb || return 1
 
-	make || return 1
+    make || return 1
 }
 
 package() {
-	cd "${srcdir}/${pkgname}"
+    cd "${srcdir}/${pkgname}"
 
-	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
+    make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 
-	install -m755 -d ${pkgdir}/usr/share/mateconf/schemas
+    install -m755 -d ${pkgdir}/usr/share/mateconf/schemas
 
-	mateconf-merge-schema ${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.schemas || return 1
-	rm -f ${pkgdir}/etc/mateconf/schemas/*.schemas
+    mateconf-merge-schema ${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.schemas || return 1
+    rm -f ${pkgdir}/etc/mateconf/schemas/*.schemas
 }
