--- a/mate-menus/distro/archlinux/PKGBUILD
+++ b/mate-menus/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-menus
-pkgver=2011.10.29
+pkgver=2011.11.16
 pkgrel=1
 pkgdesc="MATE menu specifications"
 arch=('i686' 'x86_64')
@@ -13,14 +13,16 @@ url="http://matsusoft.com.ar/projects"
 groups=('mate')
 
 build() {
-	cd "${srcdir}/${pkgname}"
-	PYTHON=/usr/bin/python2 ./configure \
-		--prefix=/usr --sysconfdir=/etc \
-		--localstatedir=/var  --disable-static || return 1
-	make || return 1
+    cd "${srcdir}/${pkgname}"
+    PYTHON=/usr/bin/python2 ./autogen.sh \
+        --prefix=/usr \
+        --sysconfdir=/etc \
+        --localstatedir=/var  \
+        --disable-static || return 1
+    make || return 1
 }
 
 package() {
-	cd "${srcdir}/${pkgname}"
-	make DESTDIR="${pkgdir}" install || return 1
+    cd "${srcdir}/${pkgname}"
+    make DESTDIR="${pkgdir}" install || return 1
 }
