--- a/mate-notification-daemon/distro/archlinux/PKGBUILD
+++ b/mate-notification-daemon/distro/archlinux/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-notification-daemon
-pkgver=2011.10.29
-pkgrel=2
+pkgver=2011.11.16
+pkgrel=1
 pkgdesc="Notification daemon for MATE"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
@@ -16,29 +16,28 @@ source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz
 sha256sums=('0d54436681f47cbc73f52762ada8827adc6ad265cb8eac4a378be80dc5a3e298')
 
 build() {
-	cd "${srcdir}/${pkgname}"
+    cd "${srcdir}/${pkgname}"
 
-	#automake
-	#autoreconf -i --force
-	#intltoolize --copy --force --automake --debug
+    ./autogen.sh \
+        --prefix=/usr \
+        --sysconfdir=/etc \
+        --localstatedir=/var \
+        --disable-static \
+        --libexecdir=/usr/lib/mate-notification-daemon \
+        --disable-schemas-install || return 1
 
-	./configure --prefix=/usr --sysconfdir=/etc \
-		--localstatedir=/var --disable-static \
-		--libexecdir=/usr/lib/mate-notification-daemon \
-		--disable-schemas-install || return 1
-
-	make || return 1
+    make || return 1
 }
 
 package() {
-	cd "${srcdir}/${pkgname}"
+    cd "${srcdir}/${pkgname}"
 
-	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
+    make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 
-	# hax! still conflicts with libnotify
-	#ln -s mate-notify-send ${pkgdir}/usr/bin/notify-send
+    # hax! still conflicts with libnotify
+    #ln -s mate-notify-send ${pkgdir}/usr/bin/notify-send
 
-	install -m755 -d "${pkgdir}/usr/share/mateconf/schemas"
-	mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas" --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.schemas || return 1
-	rm -f ${pkgdir}/etc/mateconf/schemas/*.schemas
+    install -m755 -d "${pkgdir}/usr/share/mateconf/schemas"
+    mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas" --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.schemas || return 1
+    rm -f ${pkgdir}/etc/mateconf/schemas/*.schemas
 }
