--- a/mate-polkit/distro/archlinux/PKGBUILD
+++ b/mate-polkit/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-polkit
-pkgver=2011.10.29
+pkgver=2011.11.16
 pkgrel=1
 pkgdesc="PolicyKit integration for the MATE desktop"
 arch=('i686' 'x86_64')
@@ -14,14 +14,17 @@ url="http://matsusoft.com.ar/projects"
 groups=('mate')
 
 build() {
-	cd "${srcdir}/${pkgname}"
-	./configure --prefix=/usr --sysconfdir=/etc \
-		--localstatedir=/var --libexecdir=/usr/lib/polkit-mate \
-		--disable-static || return 1
-	make || return 1
+    cd "${srcdir}/${pkgname}"
+    ./autogen.sh \
+        --prefix=/usr \
+        --sysconfdir=/etc \
+        --localstatedir=/var \
+        --libexecdir=/usr/lib/polkit-mate \
+        --disable-static || return 1
+    make || return 1
 }
 
 package() {
-	cd "${srcdir}/${pkgname}"
-	make DESTDIR="${pkgdir}" install || return 1
+    cd "${srcdir}/${pkgname}"
+    make DESTDIR="${pkgdir}" install || return 1
 }
