--- a/mate-themes/distro/archlinux/PKGBUILD
+++ b/mate-themes/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-themes
-pkgver=2011.10.29
+pkgver=2011.11.16
 pkgrel=1
 pkgdesc="Default themes for the MATE desktop"
 arch=('i686' 'x86_64')
@@ -15,14 +15,16 @@ source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz
 sha256sums=('b2fd6dffbf1a073c84fd1e86b17bf92ff7f2a48b37dda8acf77863c115225d61')
 
 build() {
-	cd "${srcdir}/${pkgname}"
+    cd "${srcdir}/${pkgname}"
 
-	./configure --prefix=/usr --enable-all-themes \
-		--disable-placeholders || return 1
-	make || return 1
+    ./autogen.sh \
+        --prefix=/usr \
+        --enable-all-themes \
+        --disable-placeholders || return 1
+    make || return 1
 }
 
 package() {
-	cd "${srcdir}/${pkgname}"
+    cd "${srcdir}/${pkgname}"
     make DESTDIR="$pkgdir" install || return 1
 }
